fix table spacing issue introduced in Foundation 6.3

--- a/scss/components/_uthsc-global.scss
+++ b/scss/components/_uthsc-global.scss
@@ -112,4 +112,8 @@
   .accordion-item.is-active .accordion-title {
     background-color: #e6e6e6;
   }
+
+  table {
+    border-spacing: 0;
+  }
 }
